# PKSS_heat_installation

./: .gitmodules  README.md  ython_building_model_RS
backend/: app.py
building_model_KS/: building_controller.py  functions.py  simulation.py
energy_provider/: ActualTime.py  AmbientT.py  AmbientTemperature.py  EnergyProvider.py  WaterTemperature.py  jsons.py  server.py
heat_exchange_model/: README.md  client.py  mock_client.py  mock_log_client.py  mock_servers.py  mock_sntp.py  mock_sntp_new.py  process_model.py  server_multithread.py  simulation.py  sntp_client.py  sntp_client_new.py
heat_exchange_regulator/: Client.cpp  Client.h  ClientSocket.cpp  ClientSocket.h  IOMode.h  IPEndpoint.cpp  IPEndpoint.h  IPVersion.h  IncludeMe.h  Json.h  Logger.cpp  Logger.h  Network.cpp  Network.h  NetworkEnvironment.cpp  NetworkEnvironment.h  NetworkException.cpp  NetworkException.h  RegulatorPID.cpp  RegulatorPID.h  Result.cpp  Result.h  Server.cpp  Server.h  ServerSocket.cpp  ServerSocket.h  Simulation.cpp  Simulation.h  Socket.cpp  Socket.h  SocketHandle.h  SocketOption.h  TransmissionType.h  main.cpp
local_visualization/: main.py  readme.md
logging_station/: main.py  readme.md
python_building_model_JP/: building_controller.py  functions.py  main.py
python_building_model_RS/: Client.py  main.py  requirements.txt  server.py
simulinkcpp_building_model/: Subsystem.cpp  Subsystem.h  Subsystem_private.h  Subsystem_types.h  budynek_model.slx  budynek_zmienne.m  (+2 more)
sntp_server/: .gitmodules  CMakeLists.txt  README.md  main.cpp
sntp_server/include/: sntp_packet.hpp
(+14 files in other folders)
